--- a/client/src/styles/inputs.scss
+++ b/client/src/styles/inputs.scss
@@ -1,10 +1,14 @@
-input {
+.ui.input {
+  width: 100%;
+  margin-bottom: 12px;
+
+  input {
+    width: 100%;
+  }
+}
+
+select {
   border: 0 none;
-  border-bottom: 1px solid #eee;
   padding: 12px;
   width: 100%;
-
-  &:focus {
-    outline: 0 none;
-  }
 }
