--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -155,6 +155,7 @@ ul {
 
 @import 'src/styles/buttons.scss';
 @import 'src/styles/inputs.scss';
+@import 'src/styles/game.scss';
 @media only screen and (min-width: 961px) {
   @import 'src/styles/responsive.scss';
 }
