--- a/client/src/styles/game.scss
+++ b/client/src/styles/game.scss
@@ -9,3 +9,13 @@
   border: 1px solid #ccc;
   list-style-type: none;
 }
+
+.users {
+  padding: 0;
+  margin: 0 0 20px;
+
+  li {
+    list-style-type: none;
+    font-size: 12px;
+  }
+}
