Implement leaving a room

--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -28,6 +28,12 @@ img {
   }
 }
 
+.small-container {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .hidden {
   display: inline-block;
 }
