--- a/client/src/styles/game.scss
+++ b/client/src/styles/game.scss
@@ -8,6 +8,9 @@
   height: 50px;
   border: 1px solid #ccc;
   list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .users {
