--- a/client/src/styles/game.scss
+++ b/client/src/styles/game.scss
@@ -1,12 +1,18 @@
 .gameRow {
   display: flex;
   flex-direction: row;
+  height: 100%;
+  width: 100%;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .gameCol {
-  width: 150px;
-  height: 50px;
+  aspect-ratio: 1/1;
+  flex: 0 1 55px;
   border: 1px solid #ccc;
+  border-radius: 50%;
   list-style-type: none;
   display: flex;
   justify-content: center;
@@ -28,6 +34,6 @@
     display: grid;
     align-items: center;
     justify-content: start;
-    grid-template-columns: 200px 200px;
+    grid-template-columns: 1fr 200px;
   }
 }
